fix: Mantis push integration, ticket visibility, and UI improvements
- Fix Mantis API integration: rewrote createIssue() to use raw Map/JsonNode,
  eliminating Jackson deserialization failures from unknown response fields
- Fix Mantis request format: removed issue wrapper (Mantis expects flat body),
  added proper error logging with >>> prefix for debugging
- Fix Mantis modal: close detail modal when opening Mantis modal,
  move Mantis modal HTML after detail modal in DOM to prevent overlay overlap
- Fix Mantis error feedback: replace hidden inline alerts with ToastrService,
  show meaningful backend error messages instead of generic fallback
- Fix ticket visibility: normalize users only see same-group tickets,
  BA/Admin see all tickets, removed historical membership tracking
- Fix BA account form: remove Nom field (caused freeze for BA users),
  remove lastName validation for BA creation
- Add Created By column to metier ticket list table
- Replace inline alert banners with Toastr notifications in create-ticket
- Add 15s timeouts to RestTemplate (was infinite, causing hangs)